language_tests/source_files/valid/range_value_flow.tr
func sumExclusive(_ r: Range[int32]) -> int32 {
    var sum = 0
    for x in r {
        sum = sum + x
    }
    return sum
}

func sumInclusive(_ r: ClosedRange[int32]) -> int32 {
    var sum = 0
    for x in r {
        sum = sum + x
    }
    return sum
}

func main() {
    let start: int32 = 2
    let end: int32 = 6

    let ex = Range[int32].new(start, end)
    let inc = ClosedRange[int32].new(start, end)

    assert(sumExclusive(ex) == 14, "2..6 should sum to 14")
    assert(sumInclusive(inc) == 20, "2..=6 should sum to 20")

    print("Range value flow ok\n")
}
