language_tests/source_files/invalid/range_mixed_bound_types.tr
func main() {
    let start: int32 = 0
    let end: uint32 = 5

    for _ in start..end {
    }
}
